--- a/partials/subscribe-form.hbs
+++ b/partials/subscribe-form.hbs
@@ -1,6 +1,6 @@
 <section class="subscribe-form">
-    <h3 class="subscribe-form-title">Subscribe to {{@site.title}}</h3>
-    <p class="subscribe-form-description">Get the latest posts delivered right to your inbox</p>
+    <h3 class="subscribe-form-title">{{t "Subscribe to"}} {{@site.title}}</h3>
+    <p class="subscribe-form-description">{{t "Get the latest posts delivered right to your inbox"}}</p>
     <form data-members-form="subscribe">
         <div class="form-group">
             <input class="subscribe-email" data-members-email placeholder="youremail@example.com" autocomplete="false" />
@@ -10,10 +10,10 @@
             </button>
         </div>
         <div class="message-success">
-            <strong>Great!</strong> Check your inbox and click the link to confirm your subscription.
+            <strong>{{t "Great!"}}</strong> {{t "Check your inbox and click the link to confirm your subscription."}}
         </div>
         <div class="message-error">
-            Please enter a valid email address!
+            {{t "Please enter a valid email address!"}}
         </div>
     </form>
 </section>
